[project]
name = "imc2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jedi-language-server>=0.44.0",
    "jsonpickle>=4.0.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "prosperity3bt>=0.4.0",
    "ruff>=0.11.2",
]
